# learning

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: BoidSystem.cpp.A49AE8ADDDFF7668.idx  BoidSystem.h.98588F5CC253E1B7.idx  Camera.cpp.D1CA8756697B1310.idx  Camera.h.5342CCBE37BBC024.idx  ECS.cpp.558CB594C636D3B6.idx  ECS.h.90A76887207A8F17.idx  Entity.cpp.961B7EB6FAF8EE5B.idx  Entity.h.E8E19D23D38DBF7C.idx  Init.cpp.E4E845E4042631CD.idx  Init.h.177E791F96766FB8.idx  Input.cpp.6772FAE8302A763B.idx  Input.h.8B2C979936F1F812.idx  SpatialGrid.cpp.CD8AD91F5E22ED54.idx  SpatialGrid.h.27A8E1D0F0C3DFBC.idx  TileGrid.cpp.ECE0A9AE7E66893F.idx  TileGrid.h.974E24C4A878FBDC.idx  TimeManager.cpp.4C650B990F3DA5A5.idx  TimeManager.h.26EC066D6E00D13B.idx  imconfig.h.CFD008A161AAA9A8.idx  imgui.cpp.15E580C4BADCF410.idx  imgui.h.80A16D990EC31540.idx  imgui_draw.cpp.C85E7F2127EED9D8.idx  imgui_impl_sdl3.cpp.C131228385A38DCA.idx  imgui_impl_sdl3.h.7018500BFAAEBBF7.idx  imgui_impl_sdlrenderer3.cpp.DB1D0E23D0F9C54D.idx  imgui_impl_sdlrenderer3.h.AD62BFBDD0CD0C56.idx  imgui_internal.h.C7052956DD6C97B5.idx  imgui_tables.cpp.4151F03D3D0C58E1.idx  imgui_widgets.cpp.781B7AB46112CC77.idx  imstb_rectpack.h.E5545976AF70337A.idx  imstb_textedit.h.B233D09BD98C95B1.idx  imstb_truetype.h.6E51D4C2CBC31D1C.idx  main.cpp.CFD75FEE64C3D1F1.idx
src/: BoidSystem.cpp  BoidSystem.h  Camera.cpp  Camera.h  CameraTargetSystem.cpp  CameraTargetSystem.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  HerdSystem.cpp  HerdSystem.h  Init.cpp  Init.h  Input.cpp  Input.h  PlayerInputSystem.cpp  PlayerInputSystem.h  Simulation.cpp  Simulation.h  SpatialGrid.cpp  SpatialGrid.h  Systems.cpp  Systems.h  TileGrid.cpp  TileGrid.h  TimeManager.cpp  TimeManager.h  helpers.h  main.cpp
